kubernetes/apps/shale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shale
  labels:
    app: shale
spec:
  type: ClusterIP
  selector:
    app: shale
  ports:
    - name: http
      port: 8080
      targetPort: http
