kubernetes/apps/shale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shale
spec:
  ingressClassName: traefik
  rules:
    - host: wsf31.lucawahlen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shale
                port:
                  number: 8080
